--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,9 @@
 # .gitattributes file for picosdk-ps5000-matlab-examples
 
+# Ignore files in html folder
+html/* linguist-documentation 
+
+# Recommended by MathWorks
 *.mlx -crlf -diff -merge
 *.mat -crlf -diff -merge
 *.fig -crlf -diff -merge
